--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <article class="max-length gutter-1-2 pad-t pad-b">
   <header class="text-center">
-    <h1 class="not-bold text-upper push-0">Queen of the Black Coast</h1>
+    <h1 class="not-bold text-upper push-0 giga">Queen of the Black Coast</h1>
     <p class="italic micro">By Robert E. Howard, 1934</p>
     <hr>
   </header>
 
-  <h2 class="pad-t pad-b">1. Conan Joins the Pirates</h2>
+  <h2 class="pad-t pad-b mega">1. Conan Joins the Pirates</h2>
   <blockquote class="italic push-2">
     <p class="push-0">Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.</p>
-  <footer class="not-italic micro">— The Song of Bélit</footer>
+  <footer class="not-italic micro">— <cite>The Song of Bélit</cite></footer>
   </blockquote>
 
   <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
@@ -42,7 +42,6 @@
   </footer>
   <hr>
 </article>
-
 
 </body>
 </html>
